# capsbar

./: .gitignore  CMakeLists.txt  README.md  README.zh-CN.md  app.manifest  design.html  gen_icon.ps1  main.c  resource.rc  tray_icon_design.html
